Closed Bug 1382495 Opened 8 years ago Closed 8 years ago

Intermittent TEST-UNEXPECTED-TIMEOUT | image/test/mochitest/test_webcam.html | application timed out after 330 seconds with no output

Categories

(Core :: Graphics: ImageLib, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla56
Tracking Status
firefox56 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: aosmond)

References

Details

(Keywords: intermittent-failure, Whiteboard: [gfx-noted])

Attachments

(1 file)

Whiteboard: [gfx-noted]
This is fallout from bug 1359833. There is an assertion before the timeout: > Assertion failure: mListener, at z:/build/build/src/image/imgRequestProxy.cpp:293
Blocks: 1359833
Flags: needinfo?(aosmond)
I see what the problem is. The assert is wrong in this context, so thankfully release builds are fine.
Assignee: nobody → aosmond
Status: NEW → ASSIGNED
Flags: needinfo?(aosmond)
Priority: -- → P3
Pushed by aosmond@gmail.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/760368896800 Fix assert in imgRequestProxy::Dispatch to accept a listener or a tab group. r=me
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: